Added Swagger description for root route
